--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -1,3 +1,10 @@
-.max-height {
-	height: 100%;
+@import './components/shared/nav-bar';
+
+.ui.max-height-minus-nav {
+	// height: @nav-bar-height;
+	height: calc(~'100% - @{nav-bar-height}');
+	height: -o-calc(~'100% - @{nav-bar-height}'); /* opera */
+	height: -webkit-calc(~'100% - @{nav-bar-height}'); /* google, safari */
+	height: -moz-calc(~'100% - @{nav-bar-height}'); /* firefox */
+	margin-top: @nav-bar-height;
 }
