removing css calc tests

--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -1,10 +1,9 @@
 @import './components/shared/nav-bar';
 
-.ui.max-height-minus-nav {
-	// height: @nav-bar-height;
-	height: calc(~'100% - @{nav-bar-height}');
-	height: -o-calc(~'100% - @{nav-bar-height}'); /* opera */
-	height: -webkit-calc(~'100% - @{nav-bar-height}'); /* google, safari */
-	height: -moz-calc(~'100% - @{nav-bar-height}'); /* firefox */
-	margin-top: @nav-bar-height;
+.ui.max-height {
+	height: 100%;
+	// height: calc(~'100% - @{nav-bar-height}');
+	// height: -o-calc(~'100% - @{nav-bar-height}'); /* opera */
+	// height: -webkit-calc(~'100% - @{nav-bar-height}'); /* google, safari */
+	// height: -moz-calc(~'100% - @{nav-bar-height}'); /* firefox */
 }
