--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -2,8 +2,5 @@
 
 .ui.max-height {
 	height: 100%;
-	// height: calc(~'100% - @{nav-bar-height}');
-	// height: -o-calc(~'100% - @{nav-bar-height}'); /* opera */
-	// height: -webkit-calc(~'100% - @{nav-bar-height}'); /* google, safari */
-	// height: -moz-calc(~'100% - @{nav-bar-height}'); /* firefox */
+	margin-top: -@nav-bar-height;
 }
