trying new menu

--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -5,8 +5,8 @@
 	margin-top: -@nav-bar-height;
 }
 
-.ui[class*="top attached"].segment {
-	border-radius: 0px;
+.ui[class*="top attached"].menu {
+	border-radius: 0;
 }
 
 .ui.container {
