--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -12,3 +12,13 @@
 .ui.container {
 	margin-top: 20px;
 }
+
+.ui.form {
+	text-align: left;
+}
+// bottom border for transparent inputs
+.ui.transparent.input {
+	border-bottom: 1px solid black;
+	padding-bottom: 5px;
+	border-radius: 0;
+}
