--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -1,4 +1,4 @@
-@import './components/shared/nav-bar';
+@import './components/nav/nav-bar';
 
 .ui.max-height {
 	height: 100%;
@@ -17,6 +17,7 @@
 	text-align: left;
 }
 // bottom border for transparent inputs
+
 .ui.transparent.input {
 	border-bottom: 1px solid black;
 	padding-bottom: 5px;
