change nav-bar structure to use large and small views

--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -4,8 +4,8 @@
     position: relative;
     z-index: 10;
 }
-// semantic UI icon and menu overrides
 
+// semantic UI icon and menu overrides
 .ui.basic.button {
     margin-top: 10px;
     box-shadow: none;
@@ -34,4 +34,8 @@
 .ui.attached.menu:not(.tabular) {
     border: 0;
     border-bottom: 1px solid #D4D4D5;
+}
+
+.ui.vertical.menu.menu-small {
+    width: 100%;
 }
