remove collapsible nav

--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -6,6 +6,10 @@
 }
 
 // semantic UI icon and menu overrides
+#chevron-menu-small {
+    background: none;
+}
+
 .ui.basic.button {
     margin-top: 10px;
     box-shadow: none;
@@ -19,6 +23,7 @@
     }
 
     &:active {
+        background: none !important;
         box-shadow: none;
     }
 
