format files and add globals to eslint

--- a/src/app.less
+++ b/src/app.less
@@ -1,9 +1,9 @@
 @import './semantic-ui-overrides';
 
 body {
-    background-color: white;
+	background-color: white;
 }
 
 hr {
-    border-top: 1px solid rgba(34, 36, 38, 0.1)
+	border-top: 1px solid rgba(34, 36, 38, 0.1);
 }
