--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -1,46 +1,46 @@
 @nav-bar-height: 50px;
 
 .nav-bar {
-    position: relative;
-    z-index: 10;
+	position: relative;
+	z-index: 10;
 }
 
 // semantic UI icon and menu overrides
 #chevron-menu-small {
-    background: none;
+	background: none;
 }
 
 .ui.basic.button {
-    margin-top: 10px;
-    box-shadow: none;
+	margin-top: 10px;
+	box-shadow: none;
 
-    &:hover {
-        box-shadow: none;
-    }
+	&:hover {
+		box-shadow: none;
+	}
 
-    &:focus {
-        box-shadow: none;
-    }
+	&:focus {
+		box-shadow: none;
+	}
 
-    &:active {
-        background: none !important;
-        box-shadow: none;
-    }
+	&:active {
+		background: none !important;
+		box-shadow: none;
+	}
 
-    &:visited {
-        box-shadow: none;
-    }
+	&:visited {
+		box-shadow: none;
+	}
 }
 
-.ui[class*="top attached"].menu {
-    margin-top: 0;
+.ui[class*='top attached'].menu {
+	margin-top: 0;
 }
 
 .ui.attached.menu:not(.tabular) {
-    border: 0;
-    border-bottom: 1px solid #D4D4D5;
+	border: 0;
+	border-bottom: 1px solid #d4d4d5;
 }
 
 .ui.vertical.menu.menu-small {
-    width: 100%;
+	width: 100%;
 }
