set nav bar background, add color palette, redirect on auth

--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -1,8 +1,11 @@
+@import '../../palette';
+
 @nav-bar-height: 50px;
 
 .nav-bar {
 	position: relative;
 	z-index: 10;
+	background: @background !important;
 }
 
 // semantic UI icon and menu overrides
