--- a/src/app.less
+++ b/src/app.less
@@ -1,7 +1,8 @@
 @import './semantic-ui-overrides';
+@import './palette';
 
 body {
-	background-color: white;
+	background-color: @background;
 }
 
 hr {
