nav drop down overlays over content

--- a/src/app.less
+++ b/src/app.less
@@ -1,5 +1,6 @@
 @import './semantic-ui-overrides';
 @import './palette';
+@import './components/shared/flex-container';
 
 body {
 	background-color: @background;
