--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -3,9 +3,11 @@
 @nav-bar-height: 50px;
 
 .nav-bar {
+	top: 0;
 	position: relative;
 	z-index: 10;
 	background: @background !important;
+	width: 100%;
 }
 
 // semantic UI icon and menu overrides
@@ -46,4 +48,5 @@
 
 .ui.vertical.menu.menu-small {
 	width: 100%;
+	height: 90%;
 }
