--- a/src/semantic-ui-overrides.less
+++ b/src/semantic-ui-overrides.less
@@ -1,10 +1,5 @@
 @import './components/nav/nav-bar';
 
-.ui.max-height {
-	height: 100%;
-	margin-top: -@nav-bar-height;
-}
-
 .ui[class*='top attached'].menu {
 	border-radius: 0;
 }
@@ -22,4 +17,8 @@
 	border-bottom: 1px solid black;
 	padding-bottom: 5px;
 	border-radius: 0;
+}
+
+.ui.grid {
+	margin: 0;
 }
