--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -1,22 +1,43 @@
 @import '../../palette';
 
-@nav-bar-height: 50px;
+@nav-bar-height: 41px;
 @animation-time: .25s;
 
 .nav-bar {
-	top: 0;
 	position: relative;
-	z-index: 10;
-	background: @background !important;
-	width: 100%;
+	z-index: 1;
 }
 
-@keyframes nav-bar-slide-down {
+.chevron-container {
+	position: relative;
+	background: @background;
+	// padding-bottom: 5px;
+	z-index: 1
+}
+
+.menu-small-down {
+	animation: menu-slide-down @animation-time forwards;
+}
+
+.menu-small-up {
+	animation: menu-slide-up @animation-time forwards;
+}
+
+@keyframes menu-slide-down {
 	from {
-		top: -300;
+		margin-top: -250%;
 	}
 	to {
-		top: 0;
+		margin-top: 0%;
+	}
+}
+
+@keyframes menu-slide-up {
+	from {
+		margin-top: 0%;
+	}
+	to {
+		margin-top: -250%;
 	}
 }
 
@@ -95,10 +116,14 @@
 
 .ui.attached.menu:not(.tabular) {
 	border: 0;
-	border-bottom: 1px solid #d4d4d5;
+	border-bottom: 1px solid @background-dark;
 }
 
 .ui.vertical.menu.menu-small {
 	width: 100%;
-	height: 90%;
+	// height: -moz-calc(100% - 50px);
+	// height: -webkit-calc(100% - 50px);
+	// height: -o-calc(100% - 50px);
+	height: ~"calc(100% - @{nav-bar-height})";
+	background: blue;
 }
