--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -127,4 +127,5 @@
 	width: 100%;
 	height: ~'calc(100% - @{nav-bar-height})';
 	background: @background;
+    box-shadow: 0 5px 2px -2px @background-dark;
 }
