--- a/src/components/shared/flex-container.less
+++ b/src/components/shared/flex-container.less
@@ -1,6 +1,32 @@
+@import '../../globals';
+
 .flex-container {
-	top: 0;
-	position: absolute;
-	width: 100%;
 	height: 100%;
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	-webkit-align-items: center;
+	justify-content: center;
+	-webkit-justify-content: center;
+	top: 0px;
+	bottom: 0px;
+	padding: 0 15 0 15;
+}
+
+@media @desktop {
+	.flex-lg {
+		width: 50%;
+	}
+}
+
+@media @tablet {
+	.flex-md {
+		width: 75%;
+	}
+}
+
+@media @mobile {
+	.flex-sm {
+		width: 95%;
+	}
 }
