more semantic removal

--- a/src/app.less
+++ b/src/app.less
@@ -1,8 +1,11 @@
-@import './palette';
+@import './styles/palette';
+@import './components/nav/nav-bar';
 @import './components/shared/flex-container';
 
 body {
 	background-color: @background;
+	margin: 0;
+	font-family: Helvetica;
 }
 
 hr {
