--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -1,13 +1,13 @@
-@import '../../palette';
+@import '../../styles/palette';
 
-@nav-bar-height: 46px;
-@animation-time: .3s;
+@nav-bar-height: 50px;
+@animation-time: 0.3s;
 @menu-margin-top: -200%;
 
 .nav-bar {
-	background: @background !important;
-	position: relative;
-	z-index: 1;
+	background-color: black;
+	color: white;
+	height: @nav-bar-height;
 }
 
 .chevron-container {
@@ -83,49 +83,4 @@
 		-ms-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
-}
-
-// semantic UI icon and menu overrides
-#chevron-menu-small {
-	background: none;
-}
-
-.ui.basic.button {
-	margin-top: 10px;
-	box-shadow: none;
-
-	&:hover {
-		box-shadow: none;
-	}
-
-	&:focus {
-		box-shadow: none;
-	}
-
-	&:active {
-		background: none !important;
-		box-shadow: none;
-	}
-
-	&:visited {
-		box-shadow: none;
-	}
-}
-
-.ui[class*='top attached'].menu {
-	margin-top: 0;
-}
-
-.ui.attached.menu:not(.tabular) {
-	border: 0;
-	border-bottom: 1px solid @background-dark;
-}
-
-.ui.vertical.menu.menu-small {
-	margin-top: @menu-margin-top;
-	padding-top: 2em;
-	width: 100%;
-	height: ~'calc(100% - @{nav-bar-height})';
-	background: @background;
-    box-shadow: 0 5px 2px -2px @background-dark;
 }
