building custom navbar

--- a/src/app.less
+++ b/src/app.less
@@ -1,5 +1,6 @@
 @import './styles/palette';
 @import './components/nav/nav-bar';
+@import './components/nav/nav-item';
 @import './components/shared/flex-container';
 
 body {
