--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -5,9 +5,11 @@
 @menu-margin-top: -200%;
 
 .nav-bar {
-	background-color: black;
-	color: white;
+	position: absolute;
+	width: 100%;
 	height: @nav-bar-height;
+	box-shadow: inset 0 -2px 0 @background-dark;
+	z-index: 1;
 }
 
 .chevron-container {
