nav-bar large view working

--- a/src/components/nav/nav-large/nav-item.less
+++ b/src/components/nav/nav-large/nav-item.less
@@ -1,9 +1,9 @@
-@import '../../styles/palette';
+@import '../../../styles/palette';
 
 .nav-item {
 	display: inline-block;
 	height: 100%;
-	padding: 0 30px;
+	padding: 0 20px;
 	text-align: center;
 	cursor: pointer;
 }
