--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -5,11 +5,13 @@
 @menu-margin-top: -200%;
 
 .nav-bar {
+	background: @background;
+	box-shadow: inset 0 -2px 0 @background-dark;
 	position: absolute;
 	width: 100%;
 	height: @nav-bar-height;
-	box-shadow: inset 0 -2px 0 @background-dark;
 	z-index: 1;
+	overflow: hidden;
 }
 
 .chevron-container {
