--- a/src/app.less
+++ b/src/app.less
@@ -1,7 +1,4 @@
 @import './styles/palette';
-@import './components/nav/nav-bar';
-@import './components/nav/nav-large/nav-item';
-@import './components/shared/flex-container';
 
 body {
 	background-color: @background;
@@ -11,4 +8,15 @@ body {
 
 hr {
 	border-top: 1px solid rgba(34, 36, 38, 0.1);
+}
+
+button,
+input[type='submit'],
+input[type='reset'] {
+	background: none !important;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit !important;
 }
