--- a/src/components/nav/nav-bar.less
+++ b/src/components/nav/nav-bar.less
@@ -5,7 +5,7 @@
 .nav-bar {
 	background: @background;
 	box-shadow: inset 0 -2px 0 @background-dark;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: @nav-bar-height;
 	z-index: 1;
