apply correct active styles

--- a/src/components/nav/nav-large/nav-item-large.less
+++ b/src/components/nav/nav-large/nav-item-large.less
@@ -6,10 +6,9 @@
 	padding: 0 20px;
 	text-align: center;
 	cursor: pointer;
-}
-
-.nav-item-active {
-	box-shadow: inset 0 -2px 0 @background-accent-1;
+	&.nav-item-active {
+		box-shadow: inset 0 -2px 0 @background-accent-1;
+	}
 }
 
 .nav-item-left {
