--- a/src/components/nav/nav-small/nav-item-small.less
+++ b/src/components/nav/nav-small/nav-item-small.less
@@ -7,10 +7,9 @@
 	text-align: left;
 	cursor: pointer;
 	font-size: 1.5em;
-}
-
-.nav-item-active {
-	box-shadow: inset 0 -2px 0 @background-accent-1;
+	&.nav-item-active {
+		font-weight: bold;
+	}
 }
 
 .nav-item-left {
