--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -1,3 +1,17 @@
-@desktop: ~'screen and (min-width:  769px)';
-@tablet: ~'screen and (max-width: 768px)';
-@mobile: ~'screen and (max-width: 480px)';
+@desktop: ~'screen and (min-width: 769px) ';
+@tablet: ~'screen and (max-width: 768px) ';
+@mobile: ~'screen and (max-width: 480px) ';
+
+.float-right {
+	float: right;
+}
+
+.float-left {
+	float: left;
+}
+
+.disabled {
+	cursor: not-allowed;
+	filter: alpha(opacity=65);
+	opacity: 0.65;
+}
