--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -1,18 +1,61 @@
+@import '../../styles/palette';
+
+.dropbtn {
+	border: none;
+	cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
 .dropdown {
 	position: relative;
 	display: inline-block;
+	display: block;
+	-webkit-margin-before: 0.75em;
+	-webkit-margin-after: 0.75em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
 }
 
+/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+	border: 1px solid @background-dark;
+	border-radius: 5px;
 	display: none;
 	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
+	background-color: @background;
+	// min-width: 130px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-	padding: 12px 16px;
 	z-index: 1;
+	right: 20%;
+	margin-top: 10px;
 }
 
-.dropdown:hover .dropdown-content {
+/* Show the dropdown menu on hover */
+.dropdown-open {
 	display: block;
+}
+
+.dropdown-content:after,
+.dropdown-content:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: ' ';
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.dropdown-content:after {
+	border-color: rgba(255, 255, 255, 0);
+	border-bottom-color: @background;
+	border-width: 10px;
+	margin-left: -10px;
+}
+.dropdown-content:before {
+	border-color: rgba(34, 34, 34, 0);
+	border-bottom-color: @background-dark;
+	border-width: 11px;
+	margin-left: -11px;
 }
