--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -15,3 +15,15 @@
 	filter: alpha(opacity=65);
 	opacity: 0.65;
 }
+
+.align-left {
+	text-align: left;
+}
+
+.align-center {
+	text-align: center;
+}
+
+.align-right {
+	text-align: right;
+}
