add error messaging

--- a/src/components/shared/button.less
+++ b/src/components/shared/button.less
@@ -1,10 +1,11 @@
 @import '../../styles/palette';
 
 .btn {
+	width: 100%;
 	padding: 10px 16px;
 	font-size: 18px;
 	line-height: 1.3333333;
-	border-radius: 6px;
+	border-radius: @border-radius;
 	border: 1px solid @background-dark;
 	&:hover {
 		background-color: @background-dark;
