--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -19,7 +19,7 @@
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
 	border: 1px solid @background-dark;
-	border-radius: 5px;
+	border-radius: @border-radius;
 	display: none;
 	position: absolute;
 	background-color: @background;
