--- a/src/components/shared/flex-container.less
+++ b/src/components/shared/flex-container.less
@@ -27,7 +27,12 @@
 }
 
 @media @mobile {
+	.flex-container {
+		align-items: end;
+		-webkit-align-items: end;
+	}
 	.flex-sm {
+		margin-top: @nav-bar-height;
 		width: 95%;
 	}
 }
