--- a/src/styles/palette.less
+++ b/src/styles/palette.less
@@ -2,3 +2,9 @@
 @background-dark: darken(@background, 15%);
 
 @background-accent-1: #222;
+
+@border-radius: 6px;
+
+@message-success: #c7ffc4;
+@message-warn: #fff8c4;
+@message-error: #ffc4c4;
