fix nav down width

--- a/src/components/nav/nav-small/nav-item-small.less
+++ b/src/components/nav/nav-small/nav-item-small.less
@@ -3,7 +3,6 @@
 .nav-item-small {
 	display: inline-block;
 	width: 100%;
-	padding: 0 20px;
 	text-align: left;
 	cursor: pointer;
 	font-size: 1.5em;
@@ -18,4 +17,8 @@
 
 .nav-item-right {
 	float: right;
+}
+
+.nav-item-padding-left {
+	padding-left: 20px;
 }
