fix small view menu

--- a/src/components/nav/nav-small/nav-small.less
+++ b/src/components/nav/nav-small/nav-small.less
@@ -8,12 +8,12 @@
 	top: @nav-bar-height;
 	background-color: @background;
 	position: absolute;
-	height: 100vh;
+	height: ~'calc(100% - 50px)';
 	width: 100%;
 }
 
 .chevron {
-	padding: 20 0 0 20;
+	padding: 20 20 10 20;
 }
 
 .menu-small-down {
