firefox style fixes

--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -10,6 +10,7 @@
 	position: relative;
 	display: inline-block;
 	display: block;
+	margin: 1em 0em 1em 0em;
 	-webkit-margin-before: 0.8em;
 	-webkit-margin-after: 0.8em;
 	-webkit-margin-start: 0px;
