--- a/src/components/shared/flex-container.less
+++ b/src/components/shared/flex-container.less
@@ -29,7 +29,7 @@
 
 @media @mobile {
 	.flex-container {
-		align-items: end;
+		align-items: inherit;
 		-webkit-align-items: end;
 	}
 	.flex-sm {
