--- a/src/components/nav/nav-small/nav-item-small.less
+++ b/src/components/nav/nav-small/nav-item-small.less
@@ -22,6 +22,7 @@
 .nav-item-padding-left {
 	padding-left: 20px;
 	display: block;
+	margin: 1em 0em 1em 0em;
 	-webkit-margin-before: 1em;
 	-webkit-margin-after: 1em;
 	-webkit-margin-start: 0px;
