--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -3,6 +3,7 @@
 .drop-btn {
 	border: none;
 	cursor: pointer;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 /* The container <div> - needed to position the dropdown content */
