add forgot password screen - correctly force navigation for authenticated users

--- a/src/app.less
+++ b/src/app.less
@@ -20,6 +20,10 @@ hr {
 	border-top: 1px solid rgba(34, 36, 38, 0.1);
 }
 
+a {
+	text-decoration: none;
+}
+
 input {
 	width: 100%;
 	min-height: 35px;
