--- a/src/components/shared/button.less
+++ b/src/components/shared/button.less
@@ -3,6 +3,7 @@
 .btn {
 	width: 100%;
 	padding: 10px 16px;
+	margin: 5px 0px;
 	font-size: 18px;
 	line-height: 1.3333333;
 	border-radius: @border-radius;
