add toggle show password text on update password

--- a/src/app.less
+++ b/src/app.less
@@ -33,6 +33,7 @@ input {
 	border: none;
 	border-bottom: 2px solid @background-dark;
 	outline: none;
+	overflow: auto;
 	&:focus {
 		border-bottom: 2px solid @background-accent-1;
 	}
