remove react-fittext

--- a/src/components/shared/dropdown-item.less
+++ b/src/components/shared/dropdown-item.less
@@ -11,9 +11,12 @@
 /* Change color of dropdown links on hover */
 .dropdown-item:hover,
 .dropdown-active {
+	cursor: pointer;
+	color: black;
 	background-color: @background-dark;
 }
 
 .dropdown-item:focus {
+	color: black;
 	outline: none;
 }
