--- a/src/styles/palette.less
+++ b/src/styles/palette.less
@@ -8,3 +8,9 @@
 @message-success: #c7ffc4;
 @message-warn: #fff8c4;
 @message-error: #ffc4c4;
+
+@link: #0068da;
+@link-active: darken(@link, 15%);
+@link-hover: darken(@link, 15%);
+@link-focus: darken(@link, 15%);
+@link-visited: darken(@link, 15%);
