--- a/src/app.less
+++ b/src/app.less
@@ -1,4 +1,5 @@
 @import './styles/palette';
+@import './styles/globals';
 
 body {
 	background-color: @background;
@@ -21,7 +22,22 @@ hr {
 }
 
 a {
+	margin-top: 10px;
 	text-decoration: none;
+	color: @link;
+	&:active {
+		color: @link-active;
+	}
+	&:hover {
+		color: @link-hover;
+	}
+	&:focus {
+		color: @link-focus;
+		outline: none;
+	}
+	&:visited {
+		color: @link-visited;
+	}
 }
 
 input {
