--- a/src/components/shared/flex-container.less
+++ b/src/components/shared/flex-container.less
@@ -19,24 +19,30 @@
 	text-align: center;
 }
 
-@media @desktop {
+@media @large {
 	.flex-lg {
 		width: 40%;
 	}
 }
 
-@media @tablet {
+@media @medium {
 	.flex-md {
-		width: 75%;
+		width: 55%;
 	}
 }
 
-@media @mobile {
+@media @small {
+	.flex-sm {
+		width: 80%;
+	}
+}
+
+@media @x-small {
 	.flex-container {
 		align-items: inherit;
 		-webkit-align-items: end;
 	}
-	.flex-sm {
+	.flex-x-sm {
 		margin-top: @nav-bar-height;
 		width: 95%;
 	}
