--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -1,6 +1,7 @@
-@desktop: ~'screen and (min-width: 769px) ';
-@tablet: ~'screen and (max-width: 768px) ';
-@mobile: ~'screen and (max-width: 480px) ';
+@large: ~'screen and (min-width: 1024px) ';
+@medium: ~'screen and (max-width: 1023px) ';
+@small: ~'screen and (max-width: 768px) ';
+@x-small: ~'screen and (max-width: 480px) ';
 
 .float-right {
 	float: right;
