--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -19,15 +19,16 @@
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+	width: 212px;
 	border: 1px solid @background-dark;
-	border-radius: @border-radius;
+	// border-radius: @border-radius;
 	display: none;
 	position: absolute;
 	background-color: @background;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
-	right: 20%;
-	margin-top: 12px;
+	// right: 20%;
+	margin-top: 13px;
 }
 
 /* Show the dropdown menu on hover */
