--- a/src/components/shared/dropdown-item.less
+++ b/src/components/shared/dropdown-item.less
@@ -10,6 +10,15 @@
 	// border-bottom: 1px solid @background;
 }
 
+.dropdown-item:after {
+	width: 172;
+	right: 20px;
+	bottom: 0;
+	position: absolute;
+	border-bottom: 1px solid @background-dark;
+	content: '';
+}
+
 /* Change color of dropdown links on hover */
 .dropdown-item:hover,
 .dropdown-active {
@@ -29,6 +38,6 @@
 	right: 20px;
 	bottom: 0;
 	position: absolute;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid @background-accent-1;
 	content: '';
 }
