--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -25,7 +25,7 @@
 	display: none;
 	position: absolute;
 	background-color: @background;
-	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	// box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
 	// right: 20%;
 	margin-top: 13px;
