add profile pictures

--- a/src/components/shared/dropdown-item.less
+++ b/src/components/shared/dropdown-item.less
@@ -7,7 +7,6 @@
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
-	// border-bottom: 1px solid @background;
 }
 
 .dropdown-item:after {
@@ -23,12 +22,11 @@
 .dropdown-item:hover,
 .dropdown-active {
 	cursor: pointer;
-	color: black;
-	// background-color: @background-dark;
+	color: @background-accent-1;
 }
 
 .dropdown-item:focus {
-	color: black;
+	color: @background-accent-1;
 	outline: none;
 }
 
