--- a/src/components/shared/dropdown.less
+++ b/src/components/shared/dropdown.less
@@ -10,9 +10,9 @@
 	position: relative;
 	display: inline-block;
 	display: block;
-	margin: 1em 0em 1em 0em;
-	-webkit-margin-before: 0.8em;
-	-webkit-margin-after: 0.8em;
+	margin: 0.6em 0em 0.6em 0em;
+	-webkit-margin-before: 0.6em;
+	-webkit-margin-after: 0.6em;
 	-webkit-margin-start: 0px;
 	-webkit-margin-end: 0px;
 }
@@ -21,14 +21,13 @@
 .dropdown-content {
 	width: 212px;
 	border: 1px solid @background-dark;
-	// border-radius: @border-radius;
 	display: none;
 	position: absolute;
 	background-color: @background;
 	// box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
-	// right: 20%;
-	margin-top: 13px;
+	margin-top: 6px;
+	right: 0;
 }
 
 /* Show the dropdown menu on hover */
@@ -36,27 +35,27 @@
 	display: block;
 }
 
-.dropdown-content:after,
-.dropdown-content:before {
-	bottom: 100%;
-	left: 50%;
-	border: solid transparent;
-	content: ' ';
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-}
-
-.dropdown-content:after {
-	border-color: rgba(255, 255, 255, 0);
-	border-bottom-color: @background;
-	border-width: 10px;
-	margin-left: -10px;
-}
-.dropdown-content:before {
-	border-color: rgba(34, 34, 34, 0);
-	border-bottom-color: @background-dark;
-	border-width: 11px;
-	margin-left: -11px;
-}
+// .dropdown-content:after,
+// .dropdown-content:before {
+// 	bottom: 100%;
+// 	left: 50%;
+// 	border: solid transparent;
+// 	content: ' ';
+// 	height: 0;
+// 	width: 0;
+// 	position: absolute;
+// 	pointer-events: none;
+// }
+//
+// .dropdown-content:after {
+// 	border-color: rgba(255, 255, 255, 0);
+// 	border-bottom-color: @background;
+// 	border-width: 10px;
+// 	margin-left: -10px;
+// }
+// .dropdown-content:before {
+// 	border-color: rgba(34, 34, 34, 0);
+// 	border-bottom-color: @background-dark;
+// 	border-width: 12px;
+// 	margin-left: -12px;
+// }
