fix a style issue

--- a/src/components/shared/slider.less
+++ b/src/components/shared/slider.less
@@ -12,14 +12,14 @@
 	border-radius: 5px;
 	background: @background-dark;
 	outline: none;
-	opacity: 0.7;
+	background: rgba(255, 255, 255, 0.6);
 	-webkit-transition: 0.2s;
 	transition: opacity 0.2s;
 	overflow: initial;
 }
 
 .slider:focus {
-	border-bottom: none;
+	border-bottom: 2px solid @background-dark;
 }
 
 .slider::-webkit-slider-thumb {
