--- a/src/app.less
+++ b/src/app.less
@@ -1,10 +1,14 @@
 @import './styles/palette';
 @import './styles/globals';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600');
 
 body {
 	background-color: @background;
 	margin: 0;
 	font-family: Helvetica;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+	font-size: 1.1em;
 }
 
 h1,
