remove error message

--- a/src/app.less
+++ b/src/app.less
@@ -47,7 +47,8 @@ a {
 input {
 	width: 100%;
 	min-height: 35px;
-	font-size: 20px;
+	font-size: 1.1em;
+	font-weight: 300;
 	padding: 5;
 	margin: 10 0 10 0;
 	border: none;
