--- a/src/styles/palette.less
+++ b/src/styles/palette.less
@@ -14,3 +14,5 @@
 @link-hover: darken(@link, 15%);
 @link-focus: darken(@link, 15%);
 @link-visited: darken(@link, 15%);
+
+@loading-spinner: lighten(#0068da, 15%);
