remove grey iOS button click style

--- a/src/app.less
+++ b/src/app.less
@@ -55,6 +55,7 @@ input {
 	border-bottom: 2px solid @background-dark;
 	outline: none;
 	overflow: auto;
+	box-shadow: none;
 	&:focus {
 		border-bottom: 2px solid @background-accent-1;
 	}
