more styled components conversion

--- a/src/app.less
+++ b/src/app.less
@@ -64,7 +64,7 @@ input {
 button,
 input[type='submit'],
 input[type='reset'] {
-	background: none !important;
+	// background: none !important;
 	color: inherit;
 	border: none;
 	font: inherit;
